0.9.1
* Token inputs are now text and have size limit

0.9
* Small fixes
* README
* pushed to master

0.89.81
* Fixed user registration
* Secured Forgot Password
* Fixed scenario when C5 would redirect to the wrong login page

0.89.6
* More sanity in saving phone numbers
* fallback in case authy ID not set
* version check at install

0.89.2
* Updated config page
* OTP login
* Fix for "use emails for login"
* Added multiple countries in selector
* Fix user attributes

0.89.1
* User user Authy ID on user update
* Software built with love
* Token verification
* SMS token

0.89
* dashboard config page working
* saving options
* removed need help link

0.85
* single pages in dashboard for configuration

0.84
* Hooked up events for user added and updated

0.83
* Added user attributes to package install

Ode to code :)